kubernetes/gitea/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  - name: git-ssh
    port: 22
    protocol: TCP
    targetPort: 22
